--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=drl2
+DB_DATABASE=drl
 DB_USERNAME=root
-DB_PASSWORD=vertrigo
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
