Update .htaccess file, Add template import monitor

--- a/.htaccess
+++ b/.htaccess
@@ -13,4 +13,10 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # Bảo vệ file .env
+    <files .env>
+    order allow,deny
+    deny from all
+    </files>
 </IfModule>
